--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "axios": "0.16.2",
+    "axios": "^0.19.0",
     "cheerio": "1.0.0-rc.2",
     "cli-table": "0.3.1",
     "commander": "2.11.0"
